ui: avoid line breaks in statements table
Release note: None

--- a/pkg/ui/src/views/statements/statements.styl
+++ b/pkg/ui/src/views/statements/statements.styl
@@ -58,6 +58,7 @@
 
 .statements-table__col-time
   text-align right
+  white-space nowrap
 
 .statements-table__col-count
   .bar-chart
